--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,21 @@ Package: guRnaud
 Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.1.0
-Author: Who wrote it
+Author: Max BRUCIAMACCHIE/Valentin DEMETS
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: GPL-2 | GPL-3
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.3.2
+Imports:
+    dplyr,
+    knitr,
+    openxlsx,
+    rlang,
+    sf,
+    shiny,
+    stats,
+    stringr,
+    tidyr
